@@ -13,7 +13,6 @@
 
 package org.flowable.engine.test.el;
 
-import static net.javacrumbs.jsonunit.assertj.JsonAssertions.assertThatJson;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.HashMap;
@@ -21,18 +20,12 @@ import java.util.Map;
 
 import org.flowable.common.engine.api.delegate.Expression;
 import org.flowable.common.engine.impl.identity.Authentication;
-import org.flowable.common.engine.impl.tenant.CurrentTenant;
-import org.flowable.engine.delegate.DelegateExecution;
 import org.flowable.engine.impl.persistence.entity.ExecutionEntity;
 import org.flowable.engine.impl.test.PluggableFlowableTestCase;
 import org.flowable.engine.runtime.ProcessInstance;
 import org.flowable.engine.test.Deployment;
 import org.flowable.variable.service.impl.el.NoExecutionVariableScope;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.ValueSource;
-
-import com.fasterxml.jackson.databind.node.ObjectNode;
 
 /**
  * @author Frederik Heremans
@@ -78,7 +71,7 @@ public class ExpressionManagerTest extends PluggableFlowableTestCase {
     @Deployment(resources = "org/flowable/engine/test/api/runtime/oneTaskProcess.bpmn20.xml")
     public void testFloatJsonVariableSerialization() {
         Map<String, Object> vars = new HashMap<>();
-        vars.put("mapVariable", processEngineConfiguration.getObjectMapper().createObjectNode().put("minFloatVar", Float.valueOf((float)-1.5)));
+        vars.put("mapVariable", processEngineConfiguration.getObjectMapper().createObjectNode().put("minFloatVar", new Float(-1.5)));
         ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess", vars);
 
         Expression expression = this.processEngineConfiguration.getExpressionManager().createExpression("#{mapVariable.minFloatVar}");
@@ -142,199 +135,6 @@ public class ExpressionManagerTest extends PluggableFlowableTestCase {
         } finally {
             // Cleanup
             Authentication.setAuthenticatedUserId(null);
-        }
-    }
-
-    @Test
-    @Deployment(resources = "org/flowable/engine/test/api/runtime/oneTaskProcess.bpmn20.xml")
-    public void testOverloadedMethodUsage() {
-        Map<String, Object> vars = new HashMap<>();
-        vars.put("nodeVariable", processEngineConfiguration.getObjectMapper().createObjectNode());
-        ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess", vars);
-
-        Expression expression = this.processEngineConfiguration.getExpressionManager().createExpression("#{nodeVariable.put('stringVar', 'String value').put('intVar', 10)}");
-        Object value = managementService.executeCommand(commandContext ->
-                expression.getValue((ExecutionEntity) runtimeService.createProcessInstanceQuery().processInstanceId(processInstance.getId()).includeProcessVariables().singleResult()));
-
-        assertThat(value).isInstanceOf(ObjectNode.class);
-        assertThatJson(value)
-                .isEqualTo("{"
-                        + "  stringVar: 'String value',"
-                        + "  intVar: 10"
-                        + "}");
-    }
-
-    @Test
-    @Deployment(resources = "org/flowable/engine/test/api/runtime/oneTaskProcess.bpmn20.xml")
-    public void testAmbiguousMethodSingleNumberParameterUsage() {
-        Map<String, Object> vars = new HashMap<>();
-        vars.put("intVar", 10);
-        vars.put("doubleVar", 25.5d);
-        vars.put("longVar", 350L);
-        ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess", vars);
-
-        Expression intExpression = processEngineConfiguration.getExpressionManager().createExpression("#{bean.number(intVar)}");
-        Object value = managementService.executeCommand(commandContext -> {
-            ExecutionEntity executionEntity = (ExecutionEntity) runtimeService.createProcessInstanceQuery()
-                    .processInstanceId(processInstance.getId())
-                    .includeProcessVariables().singleResult();
-            executionEntity.setTransientVariable("bean", new TestAmbiguousMethodSingleNumberParameterBean());
-            return intExpression.getValue(executionEntity);
-        });
-
-        assertThat(value).isEqualTo("number");
-
-        Expression doubleExpression = processEngineConfiguration.getExpressionManager().createExpression("#{bean.number(doubleVar)}");
-        value = managementService.executeCommand(commandContext -> {
-            ExecutionEntity executionEntity = (ExecutionEntity) runtimeService.createProcessInstanceQuery()
-                    .processInstanceId(processInstance.getId())
-                    .includeProcessVariables().singleResult();
-            executionEntity.setTransientVariable("bean", new TestAmbiguousMethodSingleNumberParameterBean());
-            return doubleExpression.getValue(executionEntity);
-        });
-
-        assertThat(value).isEqualTo("double");
-
-        Expression longExpression = processEngineConfiguration.getExpressionManager().createExpression("#{bean.number(longVar)}");
-        value = managementService.executeCommand(commandContext -> {
-            ExecutionEntity executionEntity = (ExecutionEntity) runtimeService.createProcessInstanceQuery()
-                    .processInstanceId(processInstance.getId())
-                    .includeProcessVariables().singleResult();
-            executionEntity.setTransientVariable("bean", new TestAmbiguousMethodSingleNumberParameterBean());
-            return longExpression.getValue(executionEntity);
-        });
-
-        assertThat(value).isEqualTo("long");
-    }
-
-    @Test
-    @Deployment(resources = "org/flowable/engine/test/api/runtime/oneTaskProcess.bpmn20.xml")
-    public void testAmbiguousMethodSingleExecutionParameterUsage() {
-        ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
-
-        Expression expression = processEngineConfiguration.getExpressionManager().createExpression("#{bean.run(execution)}");
-        Object value = managementService.executeCommand(commandContext -> {
-            ExecutionEntity executionEntity = (ExecutionEntity) runtimeService.createProcessInstanceQuery()
-                    .processInstanceId(processInstance.getId())
-                    .includeProcessVariables().singleResult();
-            executionEntity.setTransientVariable("bean", new TestAmbiguousMethodSingleExecutionParameterBean());
-            return expression.getValue(executionEntity);
-        });
-
-        assertThat(value).isEqualTo("executionEntity");
-    }
-
-    @Test
-    @Deployment(resources = "org/flowable/engine/test/api/runtime/oneTaskProcess.bpmn20.xml")
-    public void testInvokeStringMethodWithNullParameter() {
-        ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
-
-        Expression expression = processEngineConfiguration.getExpressionManager().createExpression("#{bean.string(null)}");
-        Object value = managementService.executeCommand(commandContext -> {
-            ExecutionEntity executionEntity = (ExecutionEntity) runtimeService.createProcessInstanceQuery()
-                    .processInstanceId(processInstance.getId())
-                    .includeProcessVariables().singleResult();
-            executionEntity.setTransientVariable("bean", new TestCoerceBean());
-            return expression.getValue(executionEntity);
-        });
-
-        assertThat(value).isNull();
-    }
-
-    @Test
-    @Deployment(resources = "org/flowable/engine/test/api/runtime/oneTaskProcess.bpmn20.xml")
-    public void testInvokePrimitiveIntegerMethodWithNullParameter() {
-        ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
-
-        Expression expression = processEngineConfiguration.getExpressionManager().createExpression("#{bean.primitiveInteger(null)}");
-        Object value = managementService.executeCommand(commandContext -> {
-            ExecutionEntity executionEntity = (ExecutionEntity) runtimeService.createProcessInstanceQuery()
-                    .processInstanceId(processInstance.getId())
-                    .includeProcessVariables().singleResult();
-            executionEntity.setTransientVariable("bean", new TestCoerceBean());
-            return expression.getValue(executionEntity);
-        });
-
-        assertThat(value).isEqualTo("0");
-    }
-
-    @Test
-    @Deployment(resources = "org/flowable/engine/test/api/runtime/oneTaskProcess.bpmn20.xml")
-    public void testInvokeIntegerMethodWithNullParameter() {
-        ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
-
-        Expression expression = processEngineConfiguration.getExpressionManager().createExpression("#{bean.nonPrimitiveInteger(null)}");
-        Object value = managementService.executeCommand(commandContext -> {
-            ExecutionEntity executionEntity = (ExecutionEntity) runtimeService.createProcessInstanceQuery()
-                    .processInstanceId(processInstance.getId())
-                    .includeProcessVariables().singleResult();
-            executionEntity.setTransientVariable("bean", new TestCoerceBean());
-            return expression.getValue(executionEntity);
-        });
-
-        assertThat(value).isNull();
-    }
-
-    @ParameterizedTest
-    @Deployment(resources = "org/flowable/engine/test/api/runtime/oneTaskProcess.bpmn20.xml")
-    @ValueSource(strings = { "", "flowable" })
-    public void testResolveCurrentTenantId(String tenantId) {
-        ProcessInstance processInstance = runtimeService.startProcessInstanceByKey("oneTaskProcess");
-
-        Expression expression = processEngineConfiguration.getExpressionManager().createExpression("${currentTenantId}");
-        Object value = managementService.executeCommand(commandContext -> {
-            ExecutionEntity executionEntity = (ExecutionEntity) runtimeService.createProcessInstanceQuery()
-                    .processInstanceId(processInstance.getId())
-                    .includeProcessVariables().singleResult();
-            try {
-                CurrentTenant.getTenantContext().setTenantId(tenantId);
-                return expression.getValue(executionEntity);
-            } finally {
-                CurrentTenant.getTenantContext().clearTenantId();
-            }
-        });
-
-        assertThat(value).isEqualTo(tenantId);
-    }
-
-    static class TestAmbiguousMethodSingleNumberParameterBean {
-
-        public String number(Number number) {
-            return "number";
-        }
-
-        public String number(Double d) {
-            return "double";
-        }
-
-        public String number(Long l) {
-            return "long";
-        }
-    }
-
-    static class TestAmbiguousMethodSingleExecutionParameterBean {
-
-        public String run(DelegateExecution execution) {
-            return "delegateExecution";
-        }
-
-        public String run(ExecutionEntity execution) {
-            return "executionEntity";
-        }
-    }
-
-    static class TestCoerceBean {
-
-        public String string(String value) {
-            return value;
-        }
-
-        public String primitiveInteger(int value) {
-            return String.valueOf(value);
-        }
-
-        public String nonPrimitiveInteger(Integer value) {
-            return value == null ? null : value.toString();
         }
     }
 }
